@@ -140,6 +140,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #8407: The signal handler writes the signal number as a single byte
+  instead of a nul byte into the wakeup file descriptor. So it is possible to
+  wait more than one signal and know which signals were raised.
+
 - Issue #8407: Add pthread_kill(), sigpending() and sigwait() functions to the
   signal module.
 
